--- a/simanneal/config.json
+++ b/simanneal/config.json
@@ -3,6 +3,7 @@
     "global.cellType": "bacilli",
     "global.pixelsPerMicron": 1.0,
     "global.framesPerSecond": 1.0,
+    "global.useDistanceObjective": false,
 
     // Bacilli settings
     "bacilli.maxSpeed":  24.0,  // microns per second
@@ -12,5 +13,6 @@
     "bacilli.minWidth":   4.0,  // microns
     "bacilli.maxWidth":   9.0,  // microns
     "bacilli.minLength": 14.0,  // microns
-    "bacilli.maxLength": 48.0   // microns
+    "bacilli.maxLength": 48.0,  // microns
+    "bacilli.distanceCostDivisor": 24  // microns 
 }
