gh-pages prep, fixed some bugs in cellviewer regression test

--- a/.gitignore
+++ b/.gitignore
@@ -344,3 +344,11 @@ Temporary Items
 # Text files (except examples)
 # *.txt
 !*.init.txt
+
+# cellviewer
+node_modules/
+package-lock.json
+!upload.png
+regression-tests/cellviewer/results/
+regression-tests/cellviewer/test/
+cellviewer*.sh
