--- a/cellviewer/package.json
+++ b/cellviewer/package.json
@@ -2,7 +2,7 @@
   "name": "cellviewer",
   "version": "0.1.0",
   "private": true,
-  "homepage": "http://metanovitia.github.io/cellviewer",
+  "homepage": "http://waynebhayes.github.io/CellUniverse/",
   "dependencies": {
     "@material-ui/core": "^3.9.3",
     "@material-ui/lab": "^3.0.0-alpha.30",
