--- a/.gitignore
+++ b/.gitignore
@@ -352,3 +352,5 @@ package-lock.json
 regression-tests/cellviewer/results/
 regression-tests/cellviewer/test/
 cellviewer*.sh
+!regression-tests/cellviewer/expected/pie.svg
+!regression-tests/cellviewer/expected/tree.svg
