--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,53 @@
-numpy==1.16.2
-numpydoc==0.8.0
-Pillow==5.4.1
-scikit-image==0.14.2
-scikit-learn==0.20.3
-scipy==1.2.1
-matplotlib==3.0.3
+-i https://pypi.org/simple
+alabaster==0.7.12
+babel==2.7.0
+certifi==2019.6.16
+chardet==3.0.4
+click==7.0
+cloudpickle==1.2.1
+cycler==0.10.0
+dask[all]==2.1.0
+decorator==4.4.0
+distributed==2.1.0
+docutils==0.15.1.post1
+heapdict==1.0.0
+idna==2.8
+imageio==2.5.0
+imagesize==1.1.0
+jinja2==2.10.1
+joblib==0.13.2
+kiwisolver==1.1.0
+markupsafe==1.1.1
+matplotlib==3.1.1
+msgpack==0.6.1
+networkx==2.3
+numpy==1.16.4
+numpydoc==0.9.1
+packaging==19.0
+pillow==6.1.0
+psutil==5.6.3
+pygments==2.4.2
+pyparsing==2.4.1.1
+python-dateutil==2.8.0
+pytz==2019.1
+pywavelets==1.0.3
+pyyaml==5.1.1
+requests==2.22.0
+scikit-image==0.15.0
+scikit-learn==0.21.2
+scipy==1.3.0
+six==1.12.0
+snowballstemmer==1.9.0
+sortedcontainers==2.1.0
+sphinx==2.1.2
+sphinxcontrib-applehelp==1.0.1
+sphinxcontrib-devhelp==1.0.1
+sphinxcontrib-htmlhelp==1.0.2
+sphinxcontrib-jsmath==1.0.1
+sphinxcontrib-qthelp==1.0.2
+sphinxcontrib-serializinghtml==1.1.3
+tblib==1.4.0
+toolz==0.10.0
+tornado==6.0.3
+urllib3==1.25.3
+zict==1.0.0
