Update .gitignore and remove user env files

--- a/.gitignore
+++ b/.gitignore
@@ -354,3 +354,6 @@ regression-tests/cellviewer/test/
 cellviewer*.sh
 !regression-tests/cellviewer/expected/pie.svg
 !regression-tests/cellviewer/expected/tree.svg
+.idea
+.vs
+.dask-worker-space
