Make diffraction parameters specified in config.json

--- a/config.json
+++ b/config.json
@@ -13,5 +13,10 @@
     "bacilli.maxWidth":   9.0,  // microns
     "bacilli.minLength": 14.0,  // microns
     "bacilli.maxLength": 48.0,  // microns
-    "bacilli.distanceCostDivisor": 24  // microns 
+    "bacilli.distanceCostDivisor": 24,  // microns
+    
+    // Light settings
+    // set either diffraction parameter to 0 if no diffraction needed
+    "light.diffraction.sigma": 3.0,  
+    "light.diffraction.strength": 0.5
 }
