1. updated global_optimizer when setting wsz to 1 equal to routine optimizer. 2. add regression test for global_optimizer for greySynthetic version 3.move window size option to config.json file 4. rename binary version regression test

--- a/config.json
+++ b/config.json
@@ -48,5 +48,7 @@
         "prob.opacity": 0.5,
         "modification.opacity.mu":0.0,
         "modification.opacity.sigma":0.05
-    }
+    },
+
+    "global_optimizer.window_size": 1
 }
