--- a/global_optimizer_config.json
+++ b/global_optimizer_config.json
@@ -28,9 +28,11 @@
         "cell.opacity": "auto"
     },
     
-    "prob.perturbation": 0.59,
-    "prob.combine": 0.15,
-    "prob.split" : 0.25,
+    "prob.perturbation": 0.89,
+    "prob.combine": 0.05,
+    "prob.split" : 0.05,
+    "prob.opacity_diffraction_offset": 0.0,
+    "prob.background_offset": 0.01, //This should be set to 0 if the algorithm runs in binary version
     "perturbation":
     {
         "prob.x": 0.35,
@@ -46,7 +48,7 @@
         "modification.x.sigma":0.5,
         "modification.y.sigma":0.5,
         "modification.width.sigma":0.1,
-        "modification.length.sigma":0.2,
+        "modification.length.sigma":1.0,
         "modification.rotation.sigma":0.2,
         "prob.opacity": 0.2,
         "modification.opacity.mu":0.0,
@@ -62,14 +64,19 @@
     "residual.vmin": -0.3,
     "residual.vmax": 0.3,
     //objective parameter
-    "split.cost": 0.0,
-    "combine.cost": 0.5,
+    "split.cost": 0,
+    "combine.cost": 0,
     "overlap.cost": 0.2,
     //cell.importance = importance of synthetic cell region/importance of synthetic diffraction region
     "cell.importance": 1,
-    "prob.background_offset": 0.01, //This should be set to 0 if the algorithm runs in binary version
     "background_offset.mu": 0.0,
     "background_offset.sigma": 0.01,
     "cell_brightness.mu": 0.0,
-    "cell_brightness.sigma": 0.01
+    "cell_brightness.sigma": 0.01,
+    "opacity_offset.mu": 0,
+    "opacity_offset.sigma": 0.01,
+    "diffraction_strength_offset.mu": 0,
+    "diffraction_strength_offset.sigma": 0.01,
+    "diffraction_sigma_offset.mu":  0,
+    "diffraction_sigma_offset.sigma": 0.01
 }
