--- a/requirements.txt
+++ b/requirements.txt
@@ -1,37 +1,38 @@
--i https://pypi.org/simple/
 alabaster==0.7.12
-babel==2.8.0
+Babel==2.8.0
 certifi==2019.11.28
 chardet==3.0.4
 click==7.1.1
 cloudpickle==1.3.0
 cycler==0.10.0
-dask[all]==2.1.0
+dask==2.1.0
 decorator==4.4.2
 distributed==2.1.0
 docutils==0.16
-heapdict==1.0.1
+HeapDict==1.0.1
 idna==2.9
 imageio==2.8.0
 imagesize==1.2.0
-jinja2==2.11.1
+Jinja2==2.11.1
 joblib==0.14.1
 kiwisolver==1.1.0
-markupsafe==1.1.1
+MarkupSafe==1.1.1
 matplotlib==3.1.1
 msgpack==1.0.0
 networkx==2.4
 numpy==1.16.4
 numpydoc==0.9.1
+opencv-python==4.5.1.48
 packaging==20.3
-pillow==6.2.0
+pandas==1.1.4
+Pillow==6.2.0
 psutil==5.6.6
-pygments==2.6.1
+Pygments==2.6.1
 pyparsing==2.4.6
 python-dateutil==2.8.1
 pytz==2019.3
-pywavelets==1.1.1
-pyyaml==5.3
+PyWavelets==1.1.1
+PyYAML==5.3
 requests==2.23.0
 scikit-image==0.15.0
 scikit-learn==0.21.2
@@ -39,13 +40,14 @@ scipy==1.3.0
 six==1.14.0
 snowballstemmer==2.0.0
 sortedcontainers==2.1.0
-sphinx==2.4.4
+Sphinx==2.4.4
 sphinxcontrib-applehelp==1.0.2
 sphinxcontrib-devhelp==1.0.2
 sphinxcontrib-htmlhelp==1.0.3
 sphinxcontrib-jsmath==1.0.1
 sphinxcontrib-qthelp==1.0.3
 sphinxcontrib-serializinghtml==1.1.4
+svgwrite==1.4.1
 tblib==1.6.0
 toolz==0.10.0
 tornado==6.0.4
