--- a/examples/video2/config.json
+++ b/examples/video2/config.json
@@ -25,7 +25,8 @@
         "light.diffraction.sigma": 8,  //11
         "light.diffraction.strength": 0.5, //0.6
         "light.diffraction.truncate": 3,
-        "cell.opacity": "auto"
+        "cell.opacity": "auto",
+        "padding": 0
     },
     
     "prob.perturbation": 0.92,
