Reset video 1, 2 setting
add padding to config.json

--- a/examples/video1/config.json
+++ b/examples/video1/config.json
@@ -25,7 +25,8 @@
         "light.diffraction.sigma": 10,  //11
         "light.diffraction.strength": 0.5, //0.6
         "light.diffraction.truncate": 3,
-        "cell.opacity": "auto"
+        "cell.opacity": "auto",
+        "padding": 0
     },
     
     "prob.perturbation": 0.87,
