--- a/examples/video1/config.json
+++ b/examples/video1/config.json
@@ -25,7 +25,8 @@
         "light.diffraction.sigma": 10,  //11
         "light.diffraction.strength": 0.5, //0.6
         "light.diffraction.truncate": 3,
-        "cell.opacity": "auto"
+        "cell.opacity": "auto",
+        "padding": 0
     },
     
     "prob.perturbation": 0.87,
@@ -52,7 +53,7 @@
         "modification.length.sigma":0.21,
         "modification.rotation.sigma":0.3,
         "prob.opacity": 0.3,
-	"modification.opacity.mu":0.0,
+	    "modification.opacity.mu":0.0,
         "modification.opacity.sigma":0.0001
     },
 
