--- a/Pipfile
+++ b/Pipfile
@@ -3,7 +3,12 @@ name = "pypi"
 url = "https://pypi.org/simple"
 verify_ssl = true
 
+[requires]
+python_version = "3.11"
+
 [dev-packages]
+flake8 = "*"
+mypy = "*"
 
 [packages]
 numpy = "*"
@@ -17,3 +22,8 @@ dask = "*"
 distributed = "*"
 pandas = "*"
 pipfile = "*"
+colorama = "*"
+pandas-stubs = "*"
+types-pillow = "*"
+pydantic = "*"
+types-pyyaml = "*"
