--- a/3d/C++/CMakeLists.txt
+++ b/3d/C++/CMakeLists.txt
@@ -4,10 +4,11 @@ project("celluniverse")
 
 find_package(OpenCV REQUIRED)
 
+set(CMAKE_CXX_STANDARD 17)
+set(CMAKE_CXX_STANDARD_REQUIRED ON)
+
 include_directories( ${OpenCV_INCLUDE_DIRS}
-        src
-        src/Cells
-        src/Config)
+        includes)
 
 add_executable( ${PROJECT_NAME}
         src/main.cpp
@@ -17,6 +18,8 @@ add_executable( ${PROJECT_NAME}
         src/CellUniverse.cpp
         src/args.cpp
         src/Cells/Bacilli.cpp
-        src/Cells/Sphere.cpp)
+        src/Cells/Sphere.cpp
+)
 
 target_link_libraries( ${PROJECT_NAME} ${OpenCV_LIBS})
+add_subdirectory(tests)
