Updated Lineage and Frame module

--- a/3d/C++/CMakeLists.txt
+++ b/3d/C++/CMakeLists.txt
@@ -6,19 +6,25 @@ find_package(OpenCV REQUIRED)
 
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
-
-include_directories( ${OpenCV_INCLUDE_DIRS}
-        includes)
+set(cwd ${CMAKE_CURRENT_SOURCE_DIR})
 
 add_executable( ${PROJECT_NAME}
-        src/main.cpp
-        src/Lineage.cpp
-        src/Frame.cpp
-        src/Cells/Cell.cpp
-        src/CellUniverse.cpp
-        src/args.cpp
-        src/Cells/Bacilli.cpp
-        src/Cells/Sphere.cpp
+        ${cwd}/src/main.cpp
+        ${cwd}/src/Lineage.cpp
+        ${cwd}/src/Frame.cpp
+        ${cwd}/src/Cells/Cell.cpp
+        ${cwd}/src/CellUniverse.cpp
+        ${cwd}/src/args.cpp
+        ${cwd}/src/Cells/Bacilli.cpp
+        ${cwd}/src/Cells/Sphere.cpp
+)
+
+target_include_directories( ${PROJECT_NAME} PUBLIC
+        ${OpenCV_INCLUDE_DIRS}
+        ${cwd}/includes
+        ${cwd}/src
+        ${cwd}/src/Cells
+        ${cwd}/src/Config
 )
 
 target_link_libraries( ${PROJECT_NAME} ${OpenCV_LIBS})
