Finished loading config, loading file paths

--- a/3d/C++/CMakeLists.txt
+++ b/3d/C++/CMakeLists.txt
@@ -9,11 +9,12 @@ set(cwd ${CMAKE_CURRENT_SOURCE_DIR})
 
 add_executable(${PROJECT_NAME}
         ${cwd}/src/main.cpp
-        ${cwd}/src/Lineage.cpp
-        ${cwd}/src/Frame.cpp
-        ${cwd}/src/CellUniverse.cpp
-        ${cwd}/src/args.cpp
-        ${cwd}/src/Cells/Sphere.cpp
+        src/CellFactory.cpp
+        #        ${cwd}/src/Lineage.cpp
+#        ${cwd}/src/Frame.cpp
+#        ${cwd}/src/CellUniverse.cpp
+#        ${cwd}/src/Args.cpp
+#        ${cwd}/src/Cells/Sphere.cpp
 )
 
 target_include_directories(${PROJECT_NAME} PUBLIC
