--- a/3d/C++/CMakeLists.txt
+++ b/3d/C++/CMakeLists.txt
@@ -9,10 +9,10 @@ set(cwd ${CMAKE_CURRENT_SOURCE_DIR})
 
 add_executable(${PROJECT_NAME}
         ${cwd}/src/main.cpp
-#        src/CellFactory.cpp
+        src/CellFactory.cpp
         #        ${cwd}/src/Lineage.cpp
 #        ${cwd}/src/Frame.cpp
-#        ${cwd}/src/Cells/Sphere.cpp
+        ${cwd}/src/Cells/Sphere.cpp
 )
 
 target_include_directories(${PROJECT_NAME} PUBLIC
