Included the Lineage and Frame module into the project, fixed trivial errors, not compiling

--- a/3d/C++/CMakeLists.txt
+++ b/3d/C++/CMakeLists.txt
@@ -9,9 +9,9 @@ set(cwd ${CMAKE_CURRENT_SOURCE_DIR})
 
 add_executable(${PROJECT_NAME}
         ${cwd}/src/main.cpp
-        src/CellFactory.cpp
-        #        ${cwd}/src/Lineage.cpp
-#        ${cwd}/src/Frame.cpp
+        ${cwd}/src/CellFactory.cpp
+        ${cwd}/src/Lineage.cpp
+        ${cwd}/src/Frame.cpp
         ${cwd}/src/Cells/Sphere.cpp
 )
 
