--- a/C++/examples/config.yaml
+++ b/C++/examples/config.yaml
@@ -23,6 +23,7 @@ cell:
     sigma: 4
   minRadius: 15
   maxRadius: 60
+  boundingBoxScale: 1.5
 
 # Simulation settings
 simulation:
@@ -30,6 +31,7 @@ simulation:
   background_color: 0.39
   cell_color: 0.53
   padding: 0
+  # z_scaling MUST be an integer
   z_scaling: 7 # physical expand factor (nearest integer) between Z-slice voxel high and the (x,y) dimensions. Pavak said 6.925.
   blur_sigma: 0
 
